--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+vignettes/data
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
@@ -43,6 +44,7 @@ vignettes/*.pdf
 # pkgdown site
 docs/
 _site
+_freeze
 
 # translation temp files
 po/*~
