yml updated for data frames to display as kabble

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,7 @@ format:
     embed-resources: true
     css: utils/css/custom.css
     smooth-scroll: true
+    df-print: kable
 execute: 
   freeze: auto
 
