--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-vignettes/data
+#vignettes/data
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
