--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-vignettes/data/brca_metabric
+#vignettes/data/brca_metabric
 
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
